# QueryCure

./: App.cpp  BckEnd.h  CMakeLists.txt  DiagnosisAnalysis.cpp  DiagnosisAnalysis.h  FirstGUI.sln  FirstGUI.vcxproj  FirstGUI.vcxproj.filters  MainFrame.cpp  MainFrame.h  ManageUsers.cpp  ManageUsers.h  README.md  SecurityFrame.cpp  SecurityFrame.h  SecurityPage.cpp  SecurityPage.h  Test.cpp
enc_temp_folder/e1f1adaea46f79d64b2db2a12653578c/: Test.cpp
x64/Debug/: FirstGUI.exe.recipe  FirstGUI.ilk  FirstGUI.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/FirstGUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FirstGUI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
